<resources>
    <string name="app_name">Visual Novel</string>
    <string name="name_of_novel1">Моя визуальная новелла</string>
    <string name="text_begin1">Начать</string>
    <string name="text_hello2">Привет! Меня зовут Кирюша. А тебя?</string>
    <string name="hint_enter_name2">Введите свое имя...</string>
    <string name="text_confirm2">Подтвердить</string>
    <string name="text_field3">Погуляем по полю</string>
    <string name="text_hike3">Пойдем в поход</string>
    <string name="text_run3">Пойдем на пробежку</string>
    <string name="text_invitation3">Отлично, </string>
    <string name="text_house4">Может, пойдем домой?..</string>
    <string name="text_film4">Да, и посмотрим фильм</string>
    <string name="text_halloween4">Да, и отпразднуем хэллоуин</string>
    <string name="text_house_film5">Пойдем домой и посмотрим фильм</string>
    <string name="text_house_halloween5">Пойдем домой и отпразднуем Хэллоуин</string>
    <string name="text_dark5">Как уютно... Но уже темнеет</string>
    <string name="text_film6">Может, посмотрим фильм?</string>
    <string name="text_halloween6">Да, отпразднуем Хэллоуин</string>
    <string name="text_like7">Мне понравился!</string>
    <string name="text_not_very7">Не очень...</string>
    <string name="text_impression7">Как тебе фильм?</string>
    <string name="text_film8">Да! Может, посмотрим фильм?</string>
    <string name="text_suit8">Да! Давай сделаем костюмы!</string>
    <string name="text_beautiful8">Получется очень красиво!</string>
    <string name="text_late9">Да, уже поздно...</string>
    <string name="text_sleep9">Отлично! А теперь пора спать...</string>
    <string name="text_sleep10">Жаль... Тогда пойдем спать?</string>
    <string name="text_late10">Да, уже поздно...</string>
    <string name="text_beautiful_suit11">Мне нравится твой костюм.</string>
    <string name="text_beautiful11">Твой тоже очень красивый!</string>
    <string name="text_ugly11">А мне, если честно, не нравится твой...</string>
    <string name="text_offer12">Спасибо! Ну, пойдем спать?</string>
    <string name="text_late12">Да, уже поздно...</string>
    <string name="text_sleep13">Ничего, я не в обиде. Пойдем спать?</string>
    <string name="text_late13">Да, уже поздно...</string>
    <string name="text_thanks14">Спасибо, что поиграли!</string>
    <string name="text_again14">Пройти еще раз</string>
    <string name="text_go_home">Тебе грустно... Пойдем домой?</string>
    <string name="text_username3"><![CDATA[<username>]]></string>
    <string name="text_offer3">! Чем займемся?</string>
</resources>