<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <ImageView
        android:id="@+id/backgroundThridActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/text_offer3"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/screen_background_light" />

    <ImageView
        android:id="@+id/catSecondImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/text_run3"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toTopOf="@+id/backgroundThridActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kirusha" />

    <Button
        android:id="@+id/runButton"
        style="@style/style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/text_run3"
        app:backgroundTint="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/hikeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutForTextView" />

    <Button
        android:id="@+id/hikeButton"
        style="@style/style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/text_hike3"
        android:textSize="@dimen/normalSize"
        app:backgroundTint="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/fieldButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/runButton" />

    <Button
        android:id="@+id/fieldButton"
        style="@style/style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="79dp"
        android:text="@string/text_field3"
        android:textAllCaps="false"
        app:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hikeButton" />

    <LinearLayout
        android:id="@+id/layoutForTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="352dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/runButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backgroundThridActivity">

        <TextView
            android:id="@+id/coolTextView"
            style="@style/style_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:text="@string/text_invitation3" />

        <TextView
            android:id="@+id/usernameTextView"
            style="@style/style_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:text="@string/text_username3" />

        <TextView
            android:id="@+id/offertextView3"
            style="@style/style_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:text="@string/text_offer3" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>