<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity11">

    <ImageView
        android:id="@+id/halloweenImageView11"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/text_beautiful_suit11"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_halloween1" />

    <TextView
        android:id="@+id/suitTextView"
        style="@style/style_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="352dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/text_beautiful_suit11"
        app:layout_constraintBottom_toTopOf="@+id/beautifulSuitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/beautifulSuitButton"
        style="@style/style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="81dp"
        android:text="@string/text_beautiful11"
        app:backgroundTint="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/uglySuitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suitTextView" />

    <Button
        android:id="@+id/uglySuitButton"
        style="@style/style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="79dp"
        android:gravity="start|center_vertical"
        android:text="@string/text_ugly11"
        android:textSize="@dimen/firstSmallSize"
        app:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beautifulSuitButton" />

</androidx.constraintlayout.widget.ConstraintLayout>